# qwen3_vl_fitness_sft

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
configs/: default.yaml  llamafactory_qwen3vl_lora.yaml
deepspeed/: zero2.json
docs/: data_format.md  github_upload_notes.md
examples/: video_start_overrides.csv
scripts/: 00_check_data.sh  01_build_dataset.sh  01_build_dataset_llamafactory.sh  02_check_llamafactory_env.sh  02_register_dataset.sh  03_train_lora_llamafactory.sh  03_train_lora_official.sh  03_train_lora_official_dryrun.sh  04_predict.sh  04_predict_llamafactory.sh  05_evaluate.sh  setup_official_qwen3vl.sh
src/qwen3vl_trigger/data/: build_dataset.py  build_llamafactory_dataset.py  check_data.py  frames.py  split.py
src/qwen3vl_trigger/eval/: evaluate.py
src/qwen3vl_trigger/infer/: predict.py  predict_llamafactory_lora.py
src/qwen3vl_trigger/training/: register_official_dataset.py  run_official_train.py
src/qwen3vl_trigger/utils/: config.py  jsonio.py
