[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3vl-fitness-trigger"
version = "0.1.0"
description = "Qwen3-VL fitness trigger model fine-tuning toolkit"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "pillow>=10.0.0",
  "tqdm>=4.66.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.4.9"
]

[project.optional-dependencies]
train = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "transformers>=4.57.0",
  "accelerate>=1.7.0",
  "peft>=0.17.1",
  "deepspeed>=0.17.1",
  "qwen-vl-utils[decord]>=0.0.14"
]

[tool.setuptools.packages.find]
where = ["src"]
